# course_work_6

./: README.md  pyproject.toml
skymarket/ads/: admin.py  filters.py  permissions.py  urls.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/ads/models/: ad.py  comment.py
skymarket/ads/serializers/: ad.py  comment.py
skymarket/ads/views/: ad.py  comment.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py
